# Codrax

./: .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json  tsconfig.node.json  vite.config.ts
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  FUNDING.yml  SECURITY.md
.github/workflows/: release.yml
public/: preview.html
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: files.rs  git.rs  lib.rs  main.rs  paths.rs  pipeline.rs  preview.rs  providers.rs  pty.rs  settings.rs  storage.rs
src/components/: PipelineChips.tsx  Toast.tsx
src/components/Board/: CardDetail.tsx  KanbanBoard.tsx  KanbanCard.tsx  KanbanColumn.tsx  NewTaskModal.tsx
src/components/Layout/: ActivityBar.tsx  TopBar.tsx  WelcomeScreen.tsx
src/components/Settings/: SettingRow.tsx  SettingsModal.tsx
src/components/Settings/sections/: AboutSection.tsx  GeneralSection.tsx  (+2 more)
src/components/Sidebar/: CommitModal.tsx  FileTree.tsx  GitGraph.tsx  GitStatus.tsx  PushModal.tsx  Sidebar.tsx  WorkspaceList.tsx
src/components/Terminals/: TerminalGrid.tsx  TerminalPane.tsx
src/hooks/: useAutoUpdate.ts  useFileTree.ts  useGitLog.ts  useGitStatus.ts  usePipeline.ts  usePresence.ts  useTerminal.ts
src/lib/: icons.tsx  mockData.ts  providers.ts  shell.ts  tauri.ts  theme.ts  time.ts  types.ts  webglLifecycle.ts
src/stores/: kanban.store.ts  notification.store.ts  provider.store.ts  settings.store.ts  terminal.store.ts  toast.store.ts  workspace.store.ts
