[package]
name = "codrax"
version = "0.1.2"
description = "Codrax — desktop orchestration cockpit for vibe coders using Claude Code"
authors = ["Codrax"]
edition = "2021"

[lib]
name = "codrax_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
portable-pty = "0.9.0"
git2 = "0.21.0"
tauri-plugin-dialog = "2.7.1"
urlencoding = "2.1.3"
which = "8.0.4"
tauri-plugin-updater = "2.10.1"
tauri-plugin-process = "2.3.1"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true

[target."cfg(unix)".dependencies]
libc = "0.2.186"

[dev-dependencies]
tempfile = "3.27.0"
